# src/components/dashboard/dashboard.router.ts
@@ -7,49 +7,43 @@ import {
   updateDashboard,
   deleteDashboard,
   addDashboardElement,
+  getDashboardElement,
   deleteDashboardElement,
   updateDashboardElement,
+  addDashboardFilter,
+  getDashboardFilter,
+  deleteDashboardFilter,
+  updateDashboardFilter,
 } from './dashboard.controller';
 // Import any necessary validations for dashboard and dashboard elements
 
 const router: Router = Router();
 
-// Assuming you have similar middlewares and validations for dashboard
-router.post(
-  '/dashboard/',
-  [
-    /* Middleware and Validation */
-  ],
-  createDashboard,
-);
+router.post('/dashboard/', createDashboard);
 router.get('/dashboard/all', getAllDashboards);
 router.get('/dashboard/:id', readDashboard);
-router.put(
-  '/dashboard/:id',
-  [
-    /* Middleware and Validation */
-  ],
-  updateDashboard,
-);
+router.put('/dashboard/:id', updateDashboard);
 router.delete('/dashboard/:id', deleteDashboard);
 
-router.post(
-  '/dashboard/:dashboardId/element',
-  [
-    /* Middleware and Validation */
-  ],
-  addDashboardElement,
-);
+// Dashboard elements
+router.post('/dashboard/:dashboardId/element', addDashboardElement);
+router.get('/dashboard/:dashboardId/element/:elementId', getDashboardElement);
 router.delete(
   '/dashboard/:dashboardId/element/:elementId',
   deleteDashboardElement,
 );
 router.put(
   '/dashboard/:dashboardId/element/:elementId',
-  [
-    /* Middleware and Validation */
-  ],
   updateDashboardElement,
 );
+
+// Filters
+router.post('/dashboard/:dashboardId/filter', addDashboardFilter);
+router.get('/dashboard/:dashboardId/filter/:filterId', getDashboardFilter);
+router.delete(
+  '/dashboard/:dashboardId/filter/:filterId',
+  deleteDashboardFilter,
+);
+router.put('/dashboard/:dashboardId/filter/:filterId', updateDashboardFilter);
 
 export default router;
